crates/ir/tests/snapshots/lower_test__data_types__or_pattern_basic.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_basic

type ABC = A#0 | B#1 | C#2
type Option[a] = Some#0(a) | None#1
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (o) -> Unit

fn classify(v0: ABC) -> String =
  switch v0 {
    0 ->
      "yes"
    1 ->
      "yes"
    2 ->
      "no"
  }

fn classify_nested(v1: Option[ABC]) -> String =
  switch v1 {
    0 (v2: a) ->
      switch v2 {
        0 ->
          "yes"
        1 ->
          "yes"
        _ ->
          "no"
      }
    _ ->
      "no"
  }

fn main() -> Unit =
  let v3: ~ABC = construct ABC::A#0()
  let v4: String = call classify(v3)
  let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v6: Unit = call println(v5, v4)
  let v7: ~ABC = construct ABC::C#2()
  let v8: String = call classify(v7)
  let v9: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v10: Unit = call println(v9, v8)
  let v12: ~ABC = construct ABC::B#1()
  let v13: ~Option[ABC] = construct Option::Some#0(v12)
  let v14: String = call classify_nested(v13)
  let v11: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v15: Unit = call println(v11, v14)
  v15
