crates/ir/tests/snapshots/lower_test__data_types__or_pattern_literals.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_literals

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (o) -> Unit

fn classify(v0: Int) -> String =
  let v3: Bool = eq_int(v0, 1)
  if v3 {
    "small"
  } else {
    let v2: Bool = eq_int(v0, 2)
    if v2 {
      "small"
    } else {
      let v1: Bool = eq_int(v0, 3)
      if v1 {
        "small"
      } else {
        "big"
      }
    }
  }

fn main() -> Unit =
  let v4: String = call classify(1)
  let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v6: Unit = call println(v5, v4)
  let v7: String = call classify(2)
  let v8: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v9: Unit = call println(v8, v7)
  let v10: String = call classify(3)
  let v11: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v12: Unit = call println(v11, v10)
  let v14: String = call classify(99)
  let v13: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v15: Unit = call println(v13, v14)
  v15
