crates/ir/tests/snapshots/lower_test__data_types__or_pattern_mixed_wildcard.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_mixed_wildcard

type Option[a] = Some#0(a) | None#1
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(k) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare println: (k) -> Unit

fn check(v0: Option[Int]) -> String =
  switch v0 {
    0 (v1: a) ->
      let v3: Bool = eq_int(v1, 1)
      if v3 {
        "found"
      } else {
        let v2: Bool = eq_int(v1, 2)
        if v2 {
          "found"
        } else {
          "nope"
        }
      }
    _ ->
      "nope"
  }

fn main() -> Unit =
  let v4: ~Option[Int] = construct Option::Some#0(1)
  let v5: String = call check(v4)
  let v6: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v7: Unit = call println(v6, v5)
  let v8: ~Option[Int] = construct Option::Some#0(2)
  let v9: String = call check(v8)
  let v10: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v11: Unit = call println(v10, v9)
  let v13: ~Option[Int] = construct Option::Some#0(3)
  let v14: String = call check(v13)
  let v12: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v15: Unit = call println(v12, v14)
  v15
