crates/ir/tests/snapshots/lower_test__data_types__or_pattern_non_first_arm.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_non_first_arm

type T = A#0 | B#1 | C#2 | D#3
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(m) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare println: (m) -> Unit

fn classify(v0: T) -> String =
  switch v0 {
    0 ->
      "one"
    1 ->
      "other"
    2 ->
      "other"
    3 ->
      "four"
  }

fn main() -> Unit =
  let v1: ~T = construct T::A#0()
  let v2: String = call classify(v1)
  let v3: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v4: Unit = call println(v3, v2)
  let v5: ~T = construct T::B#1()
  let v6: String = call classify(v5)
  let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v8: Unit = call println(v7, v6)
  let v9: ~T = construct T::C#2()
  let v10: String = call classify(v9)
  let v11: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v12: Unit = call println(v11, v10)
  let v14: ~T = construct T::D#3()
  let v15: String = call classify(v14)
  let v13: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v16: Unit = call println(v13, v15)
  v16
