crates/ir/tests/snapshots/lower_test__data_types__or_pattern_second_alt.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_second_alt

type T = A#0(Int) | B#1(Int) | C#2
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (o) -> Unit

fn value(v0: T) -> Int =
  switch v0 {
    0 (v1: Int) ->
      v1
    1 (v2: Int) ->
      v2
    2 ->
      0
  }

fn main() -> Unit =
  let v3: ~T = construct T::A#0(10)
  let v4: Int = call value(v3)
  let v5: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Unit = call println(v5, v4)
  let v7: ~T = construct T::B#1(20)
  let v8: Int = call value(v7)
  let v9: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v10: Unit = call println(v9, v8)
  let v12: ~T = construct T::C#2()
  let v13: Int = call value(v12)
  let v11: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v14: Unit = call println(v11, v13)
  v14
