crates/ir/tests/snapshots/lower_test__data_types__or_pattern_tuple.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module data_types__or_pattern_tuple

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (o) -> Unit

fn check(v0: (Bool, Bool)) -> String =
  let v1: Bool = tuple_project v0.0
  let v2: Bool = tuple_project v0.1
  let v4: Bool = eq_int(v1, true)
  if v4 {
    "yes"
  } else {
    let v3: Bool = eq_int(v2, true)
    if v3 {
      "yes"
    } else {
      "no"
    }
  }

fn main() -> Unit =
  let v5: (~Bool, ~Bool) = tuple(true, false)
  let v6: String = call check(v5)
  let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v8: Unit = call println(v7, v6)
  let v9: (~Bool, ~Bool) = tuple(false, true)
  let v10: String = call check(v9)
  let v11: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v12: Unit = call println(v11, v10)
  let v14: (~Bool, ~Bool) = tuple(false, false)
  let v15: String = call check(v14)
  let v13: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v16: Unit = call println(v13, v15)
  v16
